argocd/helm/rustfs/endpoints.yaml
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: rustfs
# addressType: IPv4
# ports:
#   - port: 9001
#     protocol: TCP
# endpoints:
#   - addresses:
#       - "192.168.0.218"
#     conditions:
#       ready: true
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rustfs-cli
subsets:
- addresses:
  - ip: 192.168.0.218
  ports:
  - port: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rustfs
subsets:
- addresses:
  - ip: 192.168.0.218
  ports:
  - port: 9001
