argocd/helm/rustfs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs-cli
spec:
  ports:
  - port: 9000
    targetPort: 9000
  clusterIP: "None"
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs
spec:
  ports:
  - port: 9001
    targetPort: 9001
  clusterIP: "None"
