argocd/helm/rustfs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: rustfs
spec:
  ingressClassName: nginx
  rules:
  - host: rustfs.lewandowskim.com
    http:
      paths:
      - backend:
          service:
            name: rustfs
            port:
              number: 9001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rustfs.lewandowskim.com
    secretName: tls-wildcard-lewandowskim-com
