argocd/helm/rustfs/rustfs.yaml
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: rustfs
# addressType: IPv4
# ports:
#   - port: 9001
#     protocol: TCP
# endpoints:
#   - addresses:
#       - "192.168.0.218"
#     conditions:
#       ready: true
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rustfs
subsets:
- addresses:
  - ip: 192.168.0.218
  ports:
  - port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs
spec:
  ports:
  - port: 9001
    targetPort: 9001
  clusterIP: "None"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: rustfs
spec:
  ingressClassName: nginx
  rules:
  - host: rustfs.lewandowskim.com
    http:
      paths:
      - backend:
          service:
            name: rustfs
            port:
              number: 9001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rustfs.lewandowskim.com
    secretName: tls-wildcard-lewandowskim-com
